# company-url-analysis

./: .env.example  .gitignore  CLAUDE.local.md  CLAUDE.md  README.md  liste.json  liste_test.json  pyproject.toml
.claude/: settings.local.json
.claude/hooks/: notify.json
.claude/rules/: csv-output.md  python-crewai.md  testing.md  tools-api.md
.serena/: project.yml
docs/: agent-commercial.md  kaspr.txt  zeliq_api.md
docs/plans/: 2026-01-30-project-reorganization-design.md  2026-01-30-reorganization-implementation.md  2026-02-02-gamma-logos-linkener-design.md  2026-02-02-gamma-logos-linkener-impl.md  2026-02-03-hunter-integration-design.md  2026-02-03-hunter-integration.md  2026-02-04-parallel-crew-analysis.md  2026-02-04-zeliq-email-enrichment-design.md  2026-02-04-zeliq-email-enrichment-impl.md  2026-02-05-cost-optimization-design.md  2026-02-06-apollo-migration-design.md
knowledge/: user_preference.txt
output/: company_report.csv  company_report_19cols.csv  crew_log.txt  crew_log1.txt  crew_log2.txt  crew_log3.txt
output/logs/: crew_log4.txt  crew_log5.txt  crew_log6.txt  crew_log7.txt
src/company_url_analysis_automation/: crew.py  enrichment_crew.py  main.py  search_crew.py
src/company_url_analysis_automation/config/: agents.yaml  enrichment_agents.yaml  tasks.yaml
src/company_url_analysis_automation/tools/: __init__.py  gamma_tool.py  kaspr_tool.py  pappers_tool.py
src/wakastart_leads/: __init__.py  main.py
src/wakastart_leads/crews/: __init__.py
src/wakastart_leads/crews/analysis/: __init__.py  crew.py
src/wakastart_leads/crews/analysis/config/: agents.yaml  tasks.yaml
src/wakastart_leads/crews/analysis/input/: liste_test.json
src/wakastart_leads/crews/analysis/tools/: __init__.py  apollo_tool.py  gamma_api.txt  gamma_tool.py  hunter_tool.py  kaspr_tool.py  zeliq_tool.py
src/wakastart_leads/crews/enrichment/: __init__.py  crew.py
src/wakastart_leads/crews/enrichment/config/: tasks.yaml
src/wakastart_leads/crews/search/: __init__.py  crew.py
src/wakastart_leads/crews/search/config/: agents.yaml  tasks.yaml
src/wakastart_leads/crews/search/input/: search_criteria.json
src/wakastart_leads/shared/: __init__.py
src/wakastart_leads/shared/tools/: __init__.py  pappers_api.yaml  pappers_api_summary.md  sirene_tool.py
src/wakastart_leads/shared/utils/: __init__.py  constants.py  csv_utils.py  log_rotation.py  parallel_runner.py  url_utils.py
tests/: conftest.py  test_crew_config.py  test_main.py  test_search_crew.py  test_search_main.py
tests/crews/analysis/: test_crew.py
tests/crews/analysis/tools/: test_apollo_tool.py  test_gamma_tool.py  test_hunter_tool.py  test_kaspr_tool.py  test_zeliq_tool.py
tests/crews/search/: test_crew.py
tests/integration/: test_gamma_integration.py
tests/shared/tools/: test_pappers_tool.py  test_sirene_tool.py
tests/shared/utils/: test_csv.py  test_parallel_runner.py  test_search.py  test_url.py
tests/tools/: test_custom_tool.py  test_gamma_tool.py  test_kaspr_tool.py  test_pappers_tool.py
