[project]
name = "company_url_analysis_automation"
version = "0.1.0"
description = "company_url_analysis_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.7.2",
    "python-docx>=1.2.0",
]

[project.scripts]
company_url_analysis_automation = "company_url_analysis_automation.main:run"
run_crew = "company_url_analysis_automation.main:run"
train = "company_url_analysis_automation.main:train"
replay = "company_url_analysis_automation.main:replay"
test = "company_url_analysis_automation.main:test"
run_with_trigger = "company_url_analysis_automation.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
