[project]
name = "company_url_analysis_automation"
version = "0.1.0"
description = "company_url_analysis_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "anthropic>=0.76.0",
    "crewai[google-genai,litellm,tools]==1.7.2",
    "google-generativeai>=0.8.6",
    "python-docx>=1.2.0",
]

[project.scripts]
company_url_analysis_automation = "company_url_analysis_automation.main:run"
run_crew = "company_url_analysis_automation.main:run"
train = "company_url_analysis_automation.main:train"
replay = "company_url_analysis_automation.main:replay"
test = "company_url_analysis_automation.main:test"
run_with_trigger = "company_url_analysis_automation.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (géré par le formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["company_url_analysis_automation"]
