[project]
name = "wakastart_leads"
version = "0.1.0"
description = "Multi-agent system for SaaS lead sourcing and enrichment"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "anthropic>=0.76.0",
    "crewai[google-genai,litellm,tools]==1.7.2",
    "google-generativeai>=0.8.6",
    "python-docx>=1.2.0",
]

[project.scripts]
wakastart = "wakastart_leads.main:cli"
wakastart-run = "wakastart_leads.main:run"
wakastart-search = "wakastart_leads.main:search"
wakastart-enrich = "wakastart_leads.main:enrich"
wakastart-train = "wakastart_leads.main:train"
wakastart-replay = "wakastart_leads.main:replay"
wakastart-test = "wakastart_leads.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wakastart_leads"]

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["wakastart_leads"]
